--- a/src/components/payment/Payment.css
+++ b/src/components/payment/Payment.css
@@ -38,7 +38,7 @@
     padding-bottom: 20px;
 }
 
-.payment__details > form > div > button {
+/* .payment__details > form > div > button {
     background: #f0c14b;
     border-radius: 2px;
     width: 100%;
@@ -55,4 +55,4 @@
     margin-top: 30px;
     font-size: 20px;
     font-weight: 600;
-}
+} */
