--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -86,23 +86,31 @@
 
 /* movie list card */
 .home {
-    display: flex;
+    /* display: flex;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1500px;
-  }
-  
-  .home__row {
-    display: flex;
-    z-index: 1;
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-  
-  .home__image {
-    width: 100%;
-    z-index: -1;
-    margin-bottom: -150px;
-    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-  }
+    max-width: 1500px; */
+    background-color: transparent;
+}
+
+.home > h3 {
+    margin: 50px 30px 20px 30px;
+    font-weight: 500;
+    color: greenyellow;
+    width: auto;
+}
+
+.home__row {
+display: flex;
+z-index: 1;
+margin-left: 5px;
+margin-right: 5px;
+}
+
+.home__image {
+width: 100%;
+z-index: -1;
+margin-bottom: -150px;
+mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
