--- a/src/components/bookingproduct/BookingProduct.css
+++ b/src/components/bookingproduct/BookingProduct.css
@@ -3,6 +3,7 @@
     margin-top: 20px;
     margin-bottom: 20px;
     color: #111;
+    align-items: flex-start;
 }
 
 .bookingProduct__info {
@@ -21,6 +22,9 @@
     object-fit: contain;
     width: 180px;
     height: 180px;
+    border: 1px solid gold;
+    border-radius: 10px;
+
 }
 
 .bookingProduct__rating {
