--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,19 +1,11 @@
 .login {
     background-color: white;
-    height: 100vh;
+    padding: 50px 0px;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
     color: black;
-}
-
-.login__logo {
-    margin-top: 20px;
-    margin-right: 20px;
-    object-fit: contain;
-    width: 100px;
-    margin-right: auto;
-    margin-left: auto;
 }
 
 .login__container {
