--- a/src/components/orders/Orders.css
+++ b/src/components/orders/Orders.css
@@ -1,8 +1,17 @@
 .orders {
-    padding: 20px 80px;
-    margin: 20px 0px;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 20px;
+    background-color: white;
+    color: darkblue;
+    height: max-content;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1500px;
 }
 
-.orders > h1 {
-    margin: 30px 0;
+.orders > h2 {
+    margin-top: 20px;
 }
