--- a/src/components/payment/Payment.css
+++ b/src/components/payment/Payment.css
@@ -1,4 +1,13 @@
 .payment {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 20px;
+    height: max-content;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1500px;
     background-color: white;
     color: #111;
 }
