Updated Search Bar and Booking Section

--- a/src/components/booking/Booking.css
+++ b/src/components/booking/Booking.css
@@ -1,5 +1,7 @@
 .booking {
     display: flex;
+    flex-direction: row;
+    flex: 1;
     padding: 20px;
     background-color: white;
     height: max-content;
