--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,7 +1,7 @@
 .header {
     height: 60px;
     display: flex;
-    align-items: center;
+    align-items:center;
     background-color: #010510;
     position: sticky;
     top: 0;
@@ -22,6 +22,21 @@
     margin-left: 10px;
     margin-right: 10px;
 }
+
+.header__movie__search {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    /* align-items: center; */
+    cursor: pointer;
+    margin: auto;
+}
+
+.search__movie__result {
+    align-self: center;
+    width: 90%;
+}
+
 
 .header__search:hover {
     outline: #01FF74;
