--- a/src/components/hero/MovieData.css
+++ b/src/components/hero/MovieData.css
@@ -1,31 +1,34 @@
-
 /* movie list card */
-.home {
-    /* display: flex;
+.movie__data {
+    display: gird;
+    flex-direction: row;
+    flex: 1;
+    padding: 20px;
+    height: max-content;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1500px; */
+    max-width: 1500px;
     background-color: transparent;
 }
 
-.home > h3 {
-    margin: 50px 30px 20px 30px;
+.movie__data > h3 {
+    margin: 30px 30px 20px 30px;
     font-weight: 500;
     color: greenyellow;
     width: auto;
 }
 
 .home__row {
-display: flex;
-z-index: 1;
-margin-left: 5px;
-margin-right: 5px;
+    display: flex;
+    z-index: 1;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .home__image {
-width: 100%;
-z-index: -1;
-margin-bottom: -150px;
-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+    width: 100%;
+    z-index: -1;
+    margin-bottom: -150px;
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
