--- a/src/components/booking/Booking.css
+++ b/src/components/booking/Booking.css
@@ -35,3 +35,9 @@
     height: fit-content;
     min-width: 400px;
 }
+
+.no__basket__items {
+    color: #c4c4c4;
+    text-align: center;
+    margin-top: 30px;
+}
